Fix linking if apps using QQmlPropertyMap when using version scripts

Avoid the use of the QObject constructor that takes a QObjectPrivate in
the inline QQmlPropertyMap constructor.

Task-number: QTBUG-46433
Change-Id: I62e3c80e28334ce5a4c3d2249abfada45a8dccb3
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>